test/expects_no_args.ref
Error: File "expects_no_args.cppo", line 3, characters 4-11
Error: "FOO" expects no arguments
