test/expects_no_args.cppo
(* A non-parameterized macro is given actual arguments. *)
#define FOO "foo"
1 + FOO(42)
